# subprime

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  _config.yml  cosmic-ray.toml  pyproject.toml
.github/: dependabot.yml
product/: .env.example  Dockerfile  README.md  finadvisor-demo-product.webm  pyproject.toml
product/apps/web/: api.py  email.py  gradio_app.py  main.py  rendering.py  routes.py
product/apps/web/api_v2/: __init__.py  _format.py  _session.py  admin.py  dto.py  events.py  feedback.py  personas.py  plan.py  session.py  strategy.py
product/apps/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
product/apps/web/frontend/src/: App.tsx  index.css
product/apps/web/frontend/src/api/: client.ts  types.ts
product/apps/web/frontend/src/components/: AllocationChart.tsx  AppHeader.tsx  CASUpload.tsx  CorpusChart.tsx  DocumentsUpload.tsx  ElapsedTimer.tsx  PlanRevealModal.tsx  Prose.tsx  SebiModal.tsx  StepIndicator.tsx
product/apps/web/frontend/src/feedback/: FeedbackPrompt.tsx  useEventTracker.ts
product/apps/web/frontend/src/routes/: Step1Tier.tsx  Step2Profile.tsx  Step3Strategy.tsx  Step4Plan.tsx  VerifyMagic.tsx
product/apps/web/static/: app.css  charts.js  plan-gen.js
product/apps/web/templates/: base.html  step_plan.html  step_plan_loading.html  step_profile.html  step_result.html  step_strategy.html
product/apps/web/templates/partials/: _macros.html  loading.html  otp_form.html  otp_verify.html  strategy_dashboard.html
product/apps/web/templates/partials/components/: app_footer.html  app_header.html  sebi_modal.html  step_indicator.html  theme_toggle.html
product/apps/web/templates/partials/plan/: allocations_list.html  corpus_projection.html  premium_sections.html  stat_row.html
product/migrations/: env.py
product/migrations/versions/: 001_initial.py  002_feature_flags.py  003_feedback_and_session_events.py
product/scripts/: ablation_run.py  bench_ctx_pqs.py  bench_models.py  bench_schema_vs_full.py  probe_prefix_cache.py  smoke_live.sh  time_llm.py
product/src/subprime/: cli.py
product/src/subprime/advisor/: __init__.py  _fallback.py  agent.py  evaluator.py  perspectives.py  planner.py  profile.py
product/src/subprime/advisor/prompts/: base.md  planning.md  strategy.md
product/src/subprime/core/: __init__.py  config.py  conversations.py  db.py  display.py  migrations.py  models.py  otp.py  persistence.py  plan_report.py  plan_report_logic.py  tempfiles.py
product/src/subprime/data/: __init__.py  _scrubber.py  ais.py  cas.py  cibil.py  client.py  display_names.py  documents.py  ingest.py  schemas.py  store.py  tools.py  universe.py
product/src/subprime/evaluation/: __init__.py  criteria.py  judges.py  personas.py  scorer.py
product/src/subprime/experiments/: __init__.py  analysis.py  batch_runner.py  conditions.py  estimator.py  runner.py
product/src/subprime/experiments/prompts/: bogle.md  bogle_hard.md  bogle_mild.md  lynch.md  lynch_hard.md
product/src/subprime/feedback/: __init__.py  _store.py
product/src/subprime/finetuning/: __init__.py  cli.py  curate.py  evaluate.py  format.py  harvest.py  personas_gen.py  provider.py  report.py  synth_corpus.py  synthesize.py  train.py
product/src/subprime/finetuning/artifacts/: teachers.yaml
product/src/subprime/finetuning/artifacts/plans/: bogle_n200_plans.jsonl  bogle_n50_plans.jsonl  bogle_n600_plans.jsonl  lynch_n200_plans.jsonl  lynch_n50_plans.jsonl  lynch_n600_plans.jsonl
product/src/subprime/finetuning/artifacts/synth/: bogle_batch.json  lynch_batch.json  personas.json
product/src/subprime/flags/: __init__.py  _store.py  context.py
product/src/subprime/maintenance/: archive_conversations.py
product/src/subprime/observability/: __init__.py  attrs.py  metrics.py
product/tests/: _fake_pg.py  conftest.py  test_ais.py  test_api_v2.py  test_api_v2_format.py  test_browser_live.py  test_cas.py  test_cibil.py  test_cli.py  test_documents.py  test_e2e.py  test_email.py  test_events.py  test_feedback.py  test_flags.py  test_frontend_e2e.py  test_functional.py  test_integration.py  test_migrations.py  test_observability.py  test_or_fallback.py  test_persistence.py  test_plan_report.py  test_scrubber.py  test_smoke_live.py  test_web_e2e.py  test_web_wizard.py
product/tests/fixtures/: sample_schemes.csv
product/tests/test_advisor/: test_evaluator.py  test_perspectives.py  test_planner.py  test_profile.py  test_strategy.py
product/tests/test_core/: test_config.py  test_display.py  test_models.py
product/tests/test_data/: test_client.py  test_display_names.py  test_tools.py  test_universe.py  test_universe_scoped.py
product/tests/test_evaluation/: test_aps_calibration.py  test_criteria.py  test_injection_calibration.py  test_judges.py  test_pqs_calibration.py
product/tests/test_experiments/: test_analysis.py  test_conditions.py  test_estimator.py  test_runner.py
product/tests/test_finetuning/: conftest.py  test_ablation_report.py  test_curate.py  test_evaluate.py  test_format.py  test_harvest.py  test_personas_gen.py  test_provider.py  test_report.py  test_synth_corpus.py  test_synthesize.py  test_train.py
(+4989 files in other folders)
