[project]
name = "subprime"
version = "0.1.0"
description = "Subprime Advice: Measuring how post-training priming creates hidden bias in LLM financial advisors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kamal Govindraj", email = "kamal.gs@gmail.com" },
]

dependencies = [
    # Agent framework
    "pydantic-ai>=1.70",
    "pydantic>=2.0",

    # LLM providers
    "anthropic>=0.40",
    "openai>=1.50",

    # Evaluation
    "pydantic-evals>=0.5",

    # Data analysis
    "duckdb>=1.2",
    "pandas>=2.2",
    "numpy>=2.0",

    # Statistics
    "scipy>=1.14",

    # Demo UI
    "gradio>=5.0",

    # Utilities
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
finetune = [
    # Phase 2 — fine-tuning dependencies
    "transformers>=4.46",
    "peft>=0.13",
    "bitsandbytes>=0.44",
    "datasets>=3.0",
    "trl>=0.12",
    "accelerate>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subprime"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
