[project]
name = "subprime"
version = "0.1.0"
description = "Measuring hidden bias in LLM financial advisors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kamal Govindraj", email = "kamal.gs@gmail.com" },
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "scipy>=1.14",
    "numpy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
subprime = "subprime.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subprime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
